--- a/netlify.toml
+++ b/netlify.toml
@@ -17,9 +17,7 @@
 # deploy contexts will inherit these settings.
 [context.production]
   command = "npm run build"
-  environment = {
-    PRODUCTION = "trueq"
-  }
+  environment = { PRODUCTION = "true" }
 
 # A basic redirect rule
 [[redirects]]
