--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@stencil/core": "^1.3.3",
     "@stencil/router": "^1.0.1",
     "@stencil/sass": "^1.1.1",
+    "netlify-cms": "^2.9.7",
     "node-sass-glob-importer": "^5.3.2",
     "sass": "^1.23.7"
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.12.16"
+    "@types/node": "^12.12.16",
+    "rollup-plugin-copy": "^3.1.0"
   }
 }
