--- a/src/backend_config.yml
+++ b/src/backend_config.yml
@@ -9,3 +9,33 @@ media_folder: "backend/assets/"
 
 # The src attribute for uploaded media will begin with /images/uploads
 public_folder: "/content/assets"
+
+collections:
+  - name: "pages"
+    label: "Pages"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Preview Image", name: "preview", widget: "image" }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - label: "Links"
+        name: "links"
+        widget: list
+        fields:
+          - { label: "Name", name: "name", widget: "string" }
+          - { label: "Description", name: "description", widget: "text" }
+          - { label: "Link", name: "link", widget: "string" }
+
+  - name: "blog"
+    label: "Blog"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Preview Image", name: "preview", widget: "image" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Body", name: "body", widget: "markdown" }
+      - label: "Links"
+        name: "links"
+        widget: list
+        fields:
+          - { label: "Name", name: "name", widget: "string" }
+          - { label: "Description", name: "description", widget: "text" }
+          - { label: "Link", name: "link", widget: "string" }
