--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stencil/core": "^1.3.3",
     "@stencil/router": "^1.0.1",
     "@stencil/sass": "^1.1.1",
+    "meta-marked": "^0.4.2",
     "netlify-cms": "^2.9.7",
     "node-sass-glob-importer": "^5.3.2",
     "sass": "^1.23.7"
@@ -21,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^12.12.16",
-    "rollup-plugin-copy": "^3.1.0"
+    "rollup-plugin-copy": "^3.1.0",
+    "rollup-plugin-node-polyfills": "^0.2.1"
   }
 }
