--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.1",
-    "@types/hyperscript": "^0.0.4",
-    "parcel": "^2.0.1",
-    "posthtml-include": "^1.7.2"
-  },
-  "name": "max-scopp.github.io",
-  "description": "",
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "version": "1.0.0",
+  "name": "maxscopp.de",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/max-scopp/max-scopp.github.io.git"
-  },
-  "author": "Max Scopp <me@maxscopp.de>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/max-scopp/max-scopp.github.io/issues"
-  },
-  "homepage": "https://github.com/max-scopp/max-scopp.github.io#readme",
   "dependencies": {
-    "hyperscript": "^2.0.2"
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "preact": "^10.16.0",
+    "react-router-dom": "^6.15.0",
+    "sort-by": "^1.2.0"
+  },
+  "devDependencies": {
+    "@preact/preset-vite": "^2.5.0",
+    "sass": "^1.66.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
