--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           npm ci
           npm run build
-          mv dist github-pages
+          mv dist _site
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
