--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "preact": "^10.16.0",
-    "react-router-dom": "^6.15.0",
-    "sort-by": "^1.2.0"
+    "preact": "^10.25.4",
+    "react-router-dom": "^7.1.2"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
-    "sass": "^1.66.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "@preact/preset-vite": "^2.9.4",
+    "sass": "^1.83.4",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7"
   }
 }
